# bdr_csp

./: .gitignore  0-BDR_OptimFinal.py  BDR.py  BDR_Example.py  README.md  pyproject.toml  test_chilean_loaders.py
0_Data/: Merra_2_Downloader.py  Merra_2_Processing.py  NEM_Nemosis.py
2_Optic_Analysis/: 0-BDR_Select_Paper_vF.py  0-Thesis_alt-azi.py  BeamDownReceiver.py  README.md
2_OpticalAnalysis_old/: 0-BDR_OptimFinal.py  0-SolarPilot_project.spt  BDR.py  README.md
4_SBR_Model/: Plot_Coupled_System.py  README.md  SolidBlockReceiver.py  Tests_Coupled_Model_v7.py  Tests_Discharge_modes_v1.py
5_SPR_Models/: Experiment_Convection.py  Experiment_On_Sun.py  Experiments_FresnelLens.py  README.md  Results_HPR_0D.py  Results_HPR_2D.py  Results_TPR_0D.py  Results_TPR_2D.py  SolidParticleReceiver.py  TPR_HPR_Comparison.py
6_Thermal_Subsys_Optim/: 0-Annual_Performance.py  0-BD-TPR_Optim_Plots_Thesis_vF.py  0-BD-TPR_Optimi_1var_quick.py  0-BD-TPR_SensitivityAnalysis_vF.py  0-Grid_alt-azi.py  README.md
7_Overall_Optim_Dispatch/: Alice_Springs_Real2000_Created20130430.csv  Dispatch_Geography.py  Dispatch_model.py  PerformancePowerCycle.py  SP_Characterization_2019.py  eta_TPR_0D.py
antupy/: solar.py  units.py
bdr_csp/: AntuPy.py  BeamDownReceiver.py  PerformancePowerCycle.py  PowerCycle.py  SolidBlockReceiver.py  SolidParticleReceiver.py  bdr.py  dir.py  htc.py  pb.py  pb_2.py  solar.py  spr.py
bdr_csp/models/: spr.py
old/: README_old.md
results_hpr_2d/: HPR_parametric_full_results.csv  HPR_standard_results.csv
tests/: test_spr.py  test_spr_0d.py
(+87 files in other folders)
