[tool.poetry]
name = "bdr-csp"
version = "0.1.0"
description = "optical, thermal, and financial analysis of BDR-CSP plants"
authors = ["David Saldivia <david.saldivia.s@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.1"
scipy = "^1.14.0"
Cantera = "^3.0.1"
matplotlib = "^3.9.1"
pvlib = "^0.11.0"
xarray = "^2025.1.1"
netcdf4 = "^1.7.2"
polars = "^1.30.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
